@@ -72,6 +72,7 @@ export(H5Scopy)
 export(H5Screate)
 export(H5Screate_simple)
 export(H5Sget_simple_extent_dims)
+export(H5Sset_extent_simple)
 export(H5Sis_simple)
 export(H5Sselect_index)
 export(H5Sselect_hyperslab)
